moonshot-trust-router (3.5.2.DIST) unstable; urgency=medium

  * TBD

 -- Jisc <moonshot@jisc.ac.uk>  Thu, 19 Sep 2019 00:00:00 -0000

moonshot-trust-router (3.5.1.DIST) unstable; urgency=medium

  * Add CI for Alpine 3.9 and Raspbian 10

 -- Jisc <moonshot@jisc.ac.uk>  Thu, 19 Sep 2019 00:00:00 -0000

moonshot-trust-router (3.5.0) unstable; urgency=medium

  * Add support for IPv6
  * Allow tids to receive a list IP addresses to listen from
  * Allow constraints to contain multiple '*' and '?' wildcards anywhere

 -- Jisc <moonshot@jisc.ac.uk>  Fri, 26 Apr 2019 00:00:00 -0000

moonshot-trust-router (3.4.10) unstable; urgency=medium

  * Reorganise some of the "internal" configuration options into groups
  * Fix some issues found by the CLANG static analyser
  * Add a log message indicating that changes to hostname or ports require
    a restart to take effect.

 -- Jisc <moonshot@jisc.ac.uk>  Wed, 20 Mar 2019 00:00:00 -0000

moonshot-trust-router (3.4.9) unstable; urgency=medium

  * Fix how default values are set for systemd units

 -- Jisc <moonshot@jisc.ac.uk>  Tue, 5 Mar 2019 00:00:00 -0000

moonshot-trust-router (3.4.8) unstable; urgency=medium

  * Rework of tids command line arguments and init scripts

 -- Jisc <moonshot@jisc.ac.uk>  Mon, 4 Mar 2019 00:00:00 -0000

moonshot-trust-router (3.4.7) unstable; urgency=medium

  * Update source URL
  * Allow realms to be case insensitive
  * Update "tids" so it accepts optional arguments and has sensible
    default values

 -- Jisc <moonshot@jisc.ac.uk>  Wed, 27 Feb 2019 00:00:00 -0000

moonshot-trust-router (3.4.6) unstable; urgency=medium

  * Build source package

 -- Jisc <moonshot@jisc.ac.uk>  Sat, 2 Feb 2019 00:00:00 -0000

moonshot-trust-router (3.4.5-0) unstable; urgency=medium

  * Include Build for Debian Buster

 -- Jisc <moonshot@jisc.ac.uk>  Tue, 22 Jan 2019 00:00:00 -0000

moonshot-trust-router (3.4.4-0) unstable; urgency=medium

  * Improve tidc/tids/trmon command help
  * Support OpenSSL 1.1
