@@ -1,8 +1,10 @@
 moonshot-trust-router (3.5.2.DIST) unstable; urgency=medium
 
-  * TBD
+  * Add CI for CentOS 8
+  * Added init scripts for Alpine
+  * Removed old debian init scripts
 
- -- Jisc <moonshot@jisc.ac.uk>  Thu, 19 Sep 2019 00:00:00 -0000
+ -- Jisc <moonshot@jisc.ac.uk>  Tue, 15 Oct 2019 00:00:00 -0000
 
 moonshot-trust-router (3.5.1.DIST) unstable; urgency=medium
 
